tests/testcases/errors/BCE0132-4.boo
"""
BCE0132-4.boo(9,6): BCE0132: The namespace 'Foo.Bar' already contains a definition for 'A'.
"""
namespace Foo.Bar

class A:
	pass
	
enum A:
	None
